fix scrolling style and page issue on firefox

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 
 html,
 body {
-  height: 100%;
+  // height: 100%;
   width: 100vw;
   overflow-x: hidden;
   // scroll-behavior: smooth;
@@ -193,8 +193,17 @@ a {
 .stop-card {
   transition: all 0.2s ease-in;
 }
+* {
+  scrollbar-color: #171753 #fff2ee; /* 滑块颜色  滚动条背景颜色 */
+  scrollbar-width: none; /* 滚动条宽度有三种：thin、auto、none */
+  scrollbar-width: none;
+}
 
 @media (min-width: $xl) {
+  * {
+    scrollbar-color: #171753 #fff2ee; /* 滑块颜色  滚动条背景颜色 */
+    scrollbar-width: thin; /* 滚动条宽度有三种：thin、auto、none */
+  }
   body::-webkit-scrollbar {
     width: 6px;
   }
